# cos4cloud/api/controllers/observations.js
@@ -1,47 +1,7 @@
-const fetch = require('node-fetch')
-const dJSON = JSON
-const MappingService = require('../helpers/mapping-service')
+const MappingService = require('../../services/mapping.service')
 
-module.exports = {
-  getObservations, getImages
-};
-
-function getObservations(req, res) {
-  res.set('Access-Control-Allow-Origin', '*');
-
-  if (req.method === 'OPTIONS') {
-    res.set('Access-Control-Allow-Methods', '*');
-    res.set('Access-Control-Allow-Headers', '*');
-    res.set('Access-Control-Max-Age', '360000');
-    res.status(204).send('');
-  }
-
-  const params = {};
-  Object.keys(req.swagger.params).map(key => {
-    params[key] = req.swagger.params[key].value || null
-  })
-
-
-  console.log(req.swagger.params)
-
+const observations = (req, res) => {
+  const params = req.query;
   MappingService.get(params).then(aux => res.json(aux))
 }
-
-function getImages(req, res) {
-  //set JSON content type and CORS headers for the response
-  res.header('Content-Type','application/json');
-  res.header('Access-Control-Allow-Origin', '*');
-  res.header('Access-Control-Allow-Headers', 'Content-Type');
-
-  //respond to CORS preflight requests
-  if (req.method == 'OPTIONS') {
-    res.status(204).send('');
-  }
-
-  const params = {};
-  Object.keys(req.swagger.params).map(key => {
-    params[key] = req.swagger.params[key].value || null
-  })
-  queryParams = params.ids.map(i => `ids%5B%5D=${i}`).join('&')
-  MappingService.getImages(queryParams, res)
-}
+module.exports = {observations}
