# cos4cloud/api/swagger/swagger.yaml
@@ -1,12 +1,12 @@
 swagger: "2.0"
 info:
-  version: "0.0.7"
-  title: Expert Portals Back
+  version: "0.0.1"
+  title: Cos4Bio API
+  description: All the biodiversity observations in one place
 # during dev, should point to your local machine
-host: localhost:10010
+host: https://europe-west2-cos4cloud-2d9d3.cloudfunctions.net
 # basePath prefixes all resource paths 
-basePath: /
-# 
+basePath: /api
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -19,12 +19,12 @@ produces:
   - application/json
 paths:
   /observations:
-    # binds a127 app logic to a route
     x-swagger-router-controller: observations
     get:
-      description: Returns 'Observations' from portals
-      # used as the method name of the controller
-      operationId: getObservations
+      tags:
+        - Observations
+      description: Returns 'Observations' from different portals
+      operationId: observations
       parameters:
         - name: page
           in: query
@@ -33,22 +33,26 @@ paths:
           type: number
         - name: per_page
           in: query
-          description: The page number
+          description: The page number (Don't use this)
           required: false
           type: number
         - name: taxon_name
           in: query
-          description: The name of the person to whom to say hello
+          description: The name of the specie to filter
           required: false
           type: string
         - name: origin
           in: query
-          description: portal name
+          description: portal code
           required: false
-          type: string
+          collectionFormat: csv
+          type: array
+          items:
+            type: string
+            enum: [natusfera, ispot, plantnet, artportalen]
         - name: iconic_taxa
           in: query
-          description: The name of the person to whom to say hello
+          description: The name of the root specie to filter
           required: false
           collectionFormat: csv
           type: array
@@ -96,9 +100,30 @@ paths:
         "200":
           description: Success
           schema:
+            $ref: '#/definitions/SuccessResponse'
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /observation/{id}:
+    x-swagger-router-controller: observation
+    get:
+      tags:
+        - Observations
+      description: Return observation detail
+      operationId: observation
+      parameters:
+        - name: id
+          in: path
+          description: The id of the observation
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+            $ref: "#/definitions/SuccessResponse"
         default:
           description: Error
           schema:
@@ -107,7 +132,9 @@ paths:
     # binds a127 app logic to a route
     x-swagger-router-controller: observations
     get:
-      description: Returns 'Images' from portals
+      tags:
+        - iSpot
+      description: Returns 'Images' from iSpot (🚨it's only required for iSpot)
       operationId: getImages
       parameters:
         - name: ids
@@ -122,22 +149,50 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/SuccessResponse"
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /swagger:
-    x-swagger-pipe: swagger_raw
+  /userInfo:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: userInfo
+    get:
+      tags:
+        - Auth
+      description: Returns user info status from authenix
+      operationId: userInfo
+      parameters:
+        - name: access_token
+          in: query
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/UserInfoResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
+  SuccessResponse:
     required:
       - message
     properties:
       message:
         type: string
+  UserInfoResponse:
+    required:
+      - valid
+    properties:
+      valid:
+        type: boolean
   ErrorResponse:
     required:
       - message
