# cos4cloud/controllers/export.js
@@ -1,0 +1,19 @@
+// const MappingService = require('../services/mapping.service')
+const fetch = require('node-fetch')
+const toQueryString = require('../utils/toQueryString')
+
+const exportReq = (req, res) => {
+  const query = req.query
+  delete query.origin
+  delete query.page
+  const q = toQueryString(query)
+
+  return fetch(`https://natusfera.gbif.es/observations.csv${q}&limit=3000`, {
+    headers: {
+      Cookie: '_ga=GA1.3.2128890809.1599834510; _gid=GA1.3.591215609.1609158459; remember_user_token=BAhbB1sGaQLHD0kiGU5nblV0WkpkcXdlRnhKdkJYakhrBjoGRUY%3D--076e19a189d3d33247d66a129dbc42fca9fcec8d; _session_id=BAh7DkkiD3Nlc3Npb25faWQGOgZFRkkiJTE2MmY4NmYzNTAxZDMzZmM4MzIzZTRlZmM1YTE2YjYyBjsAVEkiDnJldHVybl90bwY7AEYiGi9wZW9wbGUvcm9iaW5wYXJhZGlzZUkiEHByZWZlcmVuY2VzBjsARnsZSSIscHJvamVjdF9qb3VybmFsX3Bvc3RfZW1haWxfbm90aWZpY2F0aW9uBjsARlRJIh9jb21tZW50X2VtYWlsX25vdGlmaWNhdGlvbgY7AEZUSSImaWRlbnRpZmljYXRpb25fZW1haWxfbm90aWZpY2F0aW9uBjsARlRJIh9tZXNzYWdlX2VtYWlsX25vdGlmaWNhdGlvbgY7AEZUSSINbm9fZW1haWwGOwBGRkkiKnByb2plY3RfaW52aXRhdGlvbl9lbWFpbF9ub3RpZmljYXRpb24GOwBGVEkiGGxpc3RzX2J5X2xvZ2luX3NvcnQGOwBGSSIHaWQGOwBGSSIZbGlzdHNfYnlfbG9naW5fb3JkZXIGOwBGSSIIYXNjBjsARkkiDXBlcl9wYWdlBjsARmkjSSIRZ2JpZl9zaGFyaW5nBjsARlRJIhhvYnNlcnZhdGlvbl9saWNlbnNlBjsARjBJIhJwaG90b19saWNlbnNlBjsARjBJIhJzb3VuZF9saWNlbnNlBjsARjBJIiNzaGFyZV9vYnNlcnZhdGlvbnNfb25fZmFjZWJvb2sGOwBGVEkiInNoYXJlX29ic2VydmF0aW9uc19vbl90d2l0dGVyBjsARlRJIiBhdXRvbWF0aWNfdGF4b25vbWljX2NoYW5nZXMGOwBGVEkiFm9ic2VydmF0aW9uc192aWV3BjsARjBJIhNjb21tdW5pdHlfdGF4YQY7AEZUSSIab2JzZXJ2YXRpb25fZmllbGRzX2J5BjsARkkiC2FueW9uZQY7AEZJIhhvYnNlcnZhdGlvbnNfbGltaXRzBjsARmkCIE5JIhBfY3NyZl90b2tlbgY7AEZJIjFIRnUycWdVdjY3UE1YUGNLekphbXFvb2JxKzRQVk9QeURWZGZPcGxMK1lnPQY7AEZJIhtyZXR1cm5fdG9fZm9yX25ld191c2VyBjsARiIrL29ic2VydmF0aW9ucy9leHBvcnQ%2FcT0mdXRmOD0lRTIlOUMlOTNJIhN1c2VyX3JldHVybl90bwY7AEYiKy9vYnNlcnZhdGlvbnMvZXhwb3J0P3E9JnV0Zjg9JUUyJTlDJTkzSSIZd2FyZGVuLnVzZXIudXNlci5rZXkGOwBUWwdbBmkCxw9JIhlwSlVkdVJDQlNUNk1ZaUFNNmNjcwY7AFRJIhJ1cGRhdGVzX2NvdW50BjsARmkASSITbWVzc2FnZXNfY291bnQGOwBGaQA%3D--750755ff32a55044f218c034a6690c25f09bb413'
+    }
+  })
+  .then(r => r.text())
+  .then(r => res.send(r))
+}
+module.exports = exportReq
